@@ -6,12 +6,11 @@ import com.wordweb.repository.*;
 import com.wordweb.security.SecurityUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageRequest;
-
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,20 +23,20 @@ public class DashboardService {
     private final WrongAnswerLogRepository wrongAnswerLogRepository;
     private final StudyLogRepository studyLogRepository;
 
-    /** 현재 로그인 유저 조회 */
+    /** 현재 로그인 유저 */
     private User getLoginUser() {
         String email = SecurityUtil.getCurrentUserEmail();
         return userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("로그인 유저를 찾을 수 없습니다."));
     }
 
-    /** 대시보드 메인 API */
+    /** 메인 대시보드 */
     public DashboardResponse getDashboard() {
         User user = getLoginUser();
 
         int dailyGoal = user.getDailyWordGoal();
         int completedToday = studyLogRepository.countTodayCompleted(user.getUserId());
-        int percentage = (int) ((completedToday / (double) dailyGoal) * 100);
+        int percentage = (int)((completedToday / (double) dailyGoal) * 100);
         int streak = getStreak();
 
         return DashboardResponse.builder()
@@ -49,23 +48,23 @@ public class DashboardService {
                 .build();
     }
 
-
-    /** 1) 오늘 목표 API */
+    /** 오늘 목표 */
     public Map<String, Object> getDailyGoal() {
         User user = getLoginUser();
 
-        int goal = user.getDailyWordGoal();  
+        int goal = user.getDailyWordGoal();
         int completedToday = studyLogRepository.countTodayCompleted(user.getUserId());
 
         Map<String, Object> result = new HashMap<>();
         result.put("nickname", user.getNickname());
         result.put("dailyGoal", goal);
         result.put("completedToday", completedToday);
-        result.put("progressRate", (int) ((completedToday / (double) goal) * 100));
+        result.put("progressRate", (int)((completedToday / (double)goal) * 100));
+
         return result;
     }
 
-    /** 2) 전체 통계 API */
+    /** 전체 통계 */
     public Map<String, Object> getStats() {
         User user = getLoginUser();
 
@@ -74,35 +73,37 @@ public class DashboardService {
         long completed = completedWordRepository.countByUser(user);
         long wrongAnswers = wrongAnswerLogRepository.countByUser(user);
 
-        return Map.of(
-                "totalWords", totalWords,
-                "favoriteWords", favorites,
-                "completedWords", completed,
-                "wrongAnswers", wrongAnswers
-        );
+        Map<String, Object> result = new HashMap<>();
+        result.put("totalWords", totalWords);
+        result.put("favoriteWords", favorites);
+        result.put("completedWords", completed);
+        result.put("wrongAnswers", wrongAnswers);
+
+        return result;
     }
 
-    /** 3) 최근 7일 학습량 API */
-    public List<Map<String, Object>> getWeeklyStats() {
+    /** 최근 7일 학습량 */
+    public List<Map<String,Object>> getWeeklyStats() {
         User user = getLoginUser();
 
-        List<Map<String, Object>> result = new ArrayList<>();
+        List<Map<String,Object>> result = new ArrayList<>();
         LocalDate today = LocalDate.now();
 
         for (int i = 6; i >= 0; i--) {
             LocalDate target = today.minusDays(i);
-
             int count = studyLogRepository.countByUserAndDate(user.getUserId(), target);
 
-            result.add(Map.of(
-                    "date", target.toString(),
-                    "count", count
-            ));
+            Map<String, Object> map = new HashMap<>();
+            map.put("date", target.toString());
+            map.put("count", count);
+
+            result.add(map);
         }
 
         return result;
     }
-    
+
+    /** 연속 학습일 */
     public int getStreak() {
         User user = getLoginUser();
         Long userId = user.getUserId();
@@ -114,39 +115,47 @@ public class DashboardService {
             LocalDate target = today.minusDays(streak);
             int count = studyLogRepository.countByUserAndExactDate(userId, target);
 
-            if (count > 0) {
-                streak++;
-            } else {
-                break;
-            }
+            if (count > 0) streak++;
+            else break;
         }
 
         return streak;
     }
 
-    public List<Map<String, Object>> getWrongTop5() {
+    /** 오답 Top 5 */
+    public List<Map<String,Object>> getWrongTop5() {
         User user = getLoginUser();
 
-        return wrongAnswerLogRepository.findTop5GroupByWord(user.getUserId());
+        return wrongAnswerLogRepository.findTop5GroupByWord(user.getUserId())
+                .stream()
+                .map(dto -> {
+                    Map<String,Object> map = new HashMap<>();
+                    map.put("wordId", dto.getWordId());
+                    map.put("word", dto.getWord());
+                    map.put("count", dto.getCount());
+                    return map;
+                })
+                .collect(Collectors.toList());
     }
-    
-    public List<Map<String, Object>> getWrongReview(int limit) {
+
+    /** 오답 복습 리스트 */
+    public List<Map<String,Object>> getWrongReview(int limit) {
         User user = getLoginUser();
 
         return wrongAnswerLogRepository
                 .findByUserOrderByWrongAtDesc(user, PageRequest.of(0, limit))
                 .stream()
                 .map(log -> {
-                    Map<String, Object> map = new HashMap<>();
+                    Map<String,Object> map = new HashMap<>();
                     map.put("wordId", log.getWord().getWordId());
                     map.put("word", log.getWord().getWord());
                     map.put("meaning", log.getWord().getMeaning());
                     return map;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
-    
-    /** 4) 이번 주 요일별 학습 여부 API */
+
+    /** 이번 주 요일별 학습 여부 */
     public List<Boolean> getWeeklyStudyStatus() {
         User user = getLoginUser();
 
@@ -154,27 +163,18 @@ public class DashboardService {
         LocalDate startOfWeek = today.with(java.time.DayOfWeek.MONDAY);
         LocalDate endOfWeek = today.with(java.time.DayOfWeek.SUNDAY);
 
-        // 이번 주 학습한 날짜 목록
         List<LocalDate> studyDates = studyLogRepository.findStudyDatesBetween(
                 user,
                 startOfWeek.atStartOfDay(),
-                endOfWeek.atTime(23, 59, 59)
+                endOfWeek.atTime(23,59,59)
         );
 
-        // 월~일 총 7일 boolean 배열 생성
-        List<Boolean> result = new ArrayList<>();
-
+        List<Boolean> week = new ArrayList<>();
         for (int i = 0; i < 7; i++) {
-            LocalDate date = startOfWeek.plusDays(i);
-            result.add(studyDates.contains(date));  // true / false
+            LocalDate d = startOfWeek.plusDays(i);
+            week.add(studyDates.contains(d));
         }
 
-        return result;
+        return week;
     }
-
-
-
-
-
-
 }
